--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
+    timeout-minutes: 0
     
     steps:
       - name: Downloading & Installing Essentials
@@ -17,5 +18,4 @@ jobs:
       - name: Log In To AnyDesk
         run: cmd /c show.bat
 
-      - name: Time Counter
-        run: python time.py
+
